# GenericBot

./: README.md
GenericBot/: Cargo.toml  output.yaml
GenericBot/src/: generic_object.rs  main.rs  teste.rs
GenericBot/src/objeto/: Cargo.toml  mod.rs  objeto.rs
