[package]
name = "GenericBot"
version = "0.1.0"
edition = "2021"
default-run = "GenericBot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotkey = "0.3.1"
winapi = { version = "0.3.9", features = ["winuser", "wingdi"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dialoguer = "0.9"

[[bin]]
name = "ObjectGenTool"
path = "bin/ObjectGenTool.rs"